# checkmate

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: getting-started.md
src-tauri/src/: config.rs  lib.rs  main.rs  models.rs  onboarding.rs  parser.rs  paths.rs  watcher.rs
src-tauri/src/commands/: checklists.rs  config.rs  git.rs  mod.rs  runs.rs
src/lib/: api.ts  formGuard.svelte.ts  runState.svelte.ts
src/lib/components/: CheckboxItem.svelte  ChecklistCard.svelte  ConfirmDialog.svelte  ProgressBar.svelte  RunCard.svelte  SectionGroup.svelte  SkipReasonsDialog.svelte  SnippetDialog.svelte  TagBadge.svelte  Toast.svelte  TopLoader.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/create/: +page.svelte
src/routes/edit/[slug]/: +page.svelte
src/routes/run/[slug]/: +page.svelte
src/routes/runs/: +page.svelte
src/routes/runs/[template]/[filename]/: +page.svelte
src/routes/settings/: +page.svelte
