[package]
name = "checkmate"
version = "1.0.3"
description = "Cross-platform desktop app for reusable checklists and recorded runs"
authors = ["Leonard Grube"]
license = "MIT"
repository = "https://github.com/leonardgrube/checkmate"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "checkmate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
slug = "0.1"
tauri-plugin-dialog = "2"
notify = "6.1.1"
